--- a/{{cookiecutter.project_slug}}/docker-compose.yml
+++ b/{{cookiecutter.project_slug}}/docker-compose.yml
@@ -4,28 +4,24 @@ services:
    container_name: postgres_container
    image: postgres
    restart: always
-   environment:
-     POSTGRES_DB: postgres_db
-     POSTGRES_USER: admin
-     POSTGRES_PASSWORD: secret
-     PGDATA: /var/lib/postgresql/data
+   env_file:
+    - .env
    ports:
-     - "5432:5432"
+    - "5432:5432"
    volumes:
-     - db-data:/var/lib/postgresql/data
+    - db-data:/var/lib/postgresql/data
 
  pgadmin:
    container_name: pgadmin4_container
    image: dpage/pgadmin
    restart: always
-   environment:
-     PGADMIN_DEFAULT_EMAIL: admin@admin.com
-     PGADMIN_DEFAULT_PASSWORD: secret
-     PGADMIN_LISTEN_PORT: 80
+   env_file:
+    - .env
    ports:
-     - "8080:80"
+    - "8080:80"
    volumes:
-     - pgadmin-data:/var/lib/pgadmin
+    - pgadmin-data:/var/lib/pgadmin
+
 volumes:
  db-data:
  pgadmin-data:
