--- a/{{cookiecutter.project_slug}}/backend/Dockerfile
+++ b/{{cookiecutter.project_slug}}/backend/Dockerfile
@@ -5,13 +5,13 @@ FROM python:3.10
 WORKDIR /code
 
 #
-COPY ./requirements.txt /code/requirements.txt
+COPY ./app/requirements.txt /code/requirements.txt
 
 #
 RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
 
 #
-COPY ./app /code/app
+COPY ./app/app /code/app
 
 #
 CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
