--- a/{{cookiecutter.project_slug}}/docker-compose.yml
+++ b/{{cookiecutter.project_slug}}/docker-compose.yml
@@ -1,26 +1,35 @@
-version: '3.8'
+version: '3.9'
 services:
- db:
-   container_name: postgres_container
-   image: postgres
-   restart: always
-   env_file:
-    - .env
-   ports:
-    - "5432:5432"
-   volumes:
-    - db-data:/var/lib/postgresql/data
+  db:
+    container_name: postgres_container
+    image: postgres
+    restart: always
+    env_file:
+      - .env
+    ports:
+      - "5432:5432"
+    volumes:
+      - db-data:/var/lib/postgresql/data
 
- pgadmin:
-   container_name: pgadmin4_container
-   image: dpage/pgadmin
-   restart: always
-   env_file:
-    - .env
-   ports:
-    - "8080:80"
-   volumes:
-    - pgadmin-data:/var/lib/pgadmin
+  pgadmin:
+    container_name: pgadmin4_container
+    image: dpage/pgadmin
+    restart: always
+    env_file:
+      - .env
+    ports:
+      - "8080:80"
+    volumes:
+      - pgadmin-data:/var/lib/pgadmin
+  backend:
+    container_name: backend_api
+    build: backend/
+    ports:
+      - "80:80"
+  frontend:
+    container_name: frontend_vue
+    build: frontend/
+
 
 volumes:
  db-data:
