--- a/{{cookiecutter.project_slug}}/backend/Dockerfile
+++ b/{{cookiecutter.project_slug}}/backend/Dockerfile
@@ -1,17 +1,21 @@
-#
+# pull official base image
 FROM python:3.10
+# set working directory
+WORKDIR /usr/src/app
 
-#
-WORKDIR /code
+# set environment variables
+ENV PYTHONDONTWRITEBYTECODE 1
+ENV PYTHONUNBUFFERED 1
 
-#
-COPY ./app/requirements.txt /code/requirements.txt
+# install system dependencies
+RUN apt-get update \
+  && apt-get -y install netcat gcc postgresql \
+  && apt-get clean
 
-#
-RUN pip install --no-cache-dir --upgrade -r /code/requirements.txt
+# install python dependencies
+RUN pip install --upgrade pip
+COPY ./requirements.txt .
+RUN pip install -r requirements.txt
 
-#
-COPY ./app/app /code/app
-
-#
-CMD ["uvicorn", "app.main:app", "--host", "0.0.0.0", "--port", "80"]
+# add app
+COPY . .
