--- a/{{cookiecutter.project_slug}}/backend/app/pyproject.toml
+++ b/{{cookiecutter.project_slug}}/backend/app/pyproject.toml
@@ -12,6 +12,8 @@ python-dotenv = "^0.21.0"
 uvicorn = "^0.19.0"
 requests = "^2.28.1"
 sqlmodel = "^0.0.8"
+alembic = "^1.8.1"
+asyncpg = "^0.26.0"
 
 
 [tool.poetry.group.dev.dependencies]
