--- a/{{cookiecutter.project_slug}}/docker-compose.yml
+++ b/{{cookiecutter.project_slug}}/docker-compose.yml
@@ -21,14 +21,23 @@ services:
       - "8002:80"
     volumes:
       - pgadmin-data:/var/lib/pgadmin
+    depends_on:
+      - db
   backend:
     container_name: backend_api
     build: backend/
+    command: uvicorn app.main:app --reload --workers 1 --host 0.0.0.0 --port 80
+    volumes:
+      -./backend/app:/usr/src/app
     ports:
       - "8003:80"
+    depends_on:
+      - db
   frontend:
     container_name: frontend_vue
     build: frontend/
+    depends_on:
+      - backend
 
 
 volumes:
