--- a/{{cookiecutter.project_slug}}/.env
+++ b/{{cookiecutter.project_slug}}/.env
@@ -9,4 +9,4 @@ PGADMIN_DEFAULT_EMAIL={{cookiecutter.pgadmin_user}}
 PGADMIN_DEFAULT_PASSWORD={{cookiecutter.pgadmin_password}}
 
 # Database Connection
-DATABASE_URL = postgresql+asyncpg://{{cookiecutter.pg_user}}:{{cookiecutter.pg_password}}@db:5432
+DATABASE_URL = postgresql+asyncpg://{{cookiecutter.pg_user}}:{{cookiecutter.pg_password}}@localhost:8001
